--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/materials_and_their_working_properties.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/materials_and_their_working_properties.html
@@ -18,7 +18,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href=".html">Industry</a>
+                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_papers_and_boards.html">Papers and boards</a>
                         </div>
                     </div>
                 </div>
@@ -28,7 +28,8 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="/.html">Enterprise</a>
+                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_natural_and_manufactured_timbers.html">Natural and manufactured timbers
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -38,7 +39,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
-                            <a href="/.html">Sustainability</a>
+                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_metals_and_alloys.html">Metals and alloys</a>
                         </div>
                     </div>
                 </div>
@@ -48,7 +49,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\DigitalTechnologies.html">Digital Technologies</a> -->
-                            <a href="/.html">People</a>
+                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_polymers.html">Polymers</a>
                         </div>
                     </div>
                 </div>
@@ -57,7 +58,7 @@
                     <div class="portfolio-img-background" style="background-image:url(/images/finishing_cover.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <a href="/.html">Culture</a>
+                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_textiles.html">Textiles</a>
                             <!-- <a href="Notes\FactorsInfluencingTheDevelopmentOfProducts.html">Factors Influencing The Development Of Products</a> -->
                         </div>
                     </div>
@@ -68,37 +69,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\EffectsOfTechnologicalDevelopments.html">Effects Of Technological Developments</a> -->
-                            <a href="/.html">Society</a>
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio6.jpg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="blurbox">
-                            <!-- <a href="Notes\EffectsOfTechnologicalDevelopments.html">Effects Of Technological Developments</a> -->
-                            <a href="/.html">Environment</a>
-                        </div>
-                    </div>
-                </div>      
-
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio6.jpg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="blurbox">
-                            <!-- <a href="Notes\EffectsOfTechnologicalDevelopments.html">Effects Of Technological Developments</a> -->
-                            <a href="/.html">Production techniques and systems</a>
-                        </div>
-                    </div>
-                </div>      
-
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio6.jpg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="blurbox">
-                            <!-- <a href="Notes\EffectsOfTechnologicalDevelopments.html">Effects Of Technological Developments</a> -->
-                            <a href="/.html">How the critical evaluation of new and emerging technologies informs design decisions</a>
+                            <a href="aqa_gcse_core_tech_notes_pages/aqa_gcse_material_properties.html">Material properties</a>
                         </div>
                     </div>
                 </div>
