--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_metals_and_alloys.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_metals_and_alloys.html
@@ -338,7 +338,7 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic ">Metals and alloys Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A6/3.1.6_metals_and_alloys.pdf">Metals and alloys Questions</a>
                 </div> 
             </div>
         </div>
