--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_material_properties.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_material_properties.html
@@ -90,7 +90,7 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A6">Material properties Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A6/3.1.6_material_properties.pdf">Material properties Questions</a>
                 </div> 
             </div>
         </div>
