--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_spec_tech_prin_gcse_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_spec_tech_prin_gcse_notes.html
@@ -25,7 +25,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href=".html">Topic 1: Selection of materials or components</a>
+                            <a href="/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/selection_of_materials_or_components.html">Topic 1: Selection of materials or components</a>
                         </div>
                     </div>
                 </div>
@@ -35,7 +35,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="/.html">Topic 2: Forces and stresses</a>
+                            <a href="/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/forces_and_stresses.html">Topic 2: Forces and stresses</a>
                         </div>
                     </div>
                 </div>
@@ -45,7 +45,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
-                            <a href="/.html">Topic 3: Ecological and social footprint</a>
+                            <a href="/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/ecological_and_social_footprint.html">Topic 3: Ecological and social footprint</a>
                         </div>
                     </div>
                 </div>
@@ -55,7 +55,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\DigitalTechnologies.html">Digital Technologies</a> -->
-                            <a href="/.html">Topic 4: Sources and origins</a>
+                            <a href="/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/sources_and_origins.html">Topic 4: Sources and origins</a>
                         </div>
                     </div>
                 </div>
@@ -64,7 +64,7 @@
                     <div class="portfolio-img-background" style="background-image:url(/images/finishing_cover.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <a href="/.html">Topic 5: Using and working with materials</a>
+                            <a href="/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/using_and_working_with_materials.html">Topic 5: Using and working with materials</a>
                             <!-- <a href="Notes\FactorsInfluencingTheDevelopmentOfProducts.html">Factors Influencing The Development Of Products</a> -->
                         </div>
                     </div>
@@ -75,7 +75,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\EffectsOfTechnologicalDevelopments.html">Effects Of Technological Developments</a> -->
-                            <a href="/.html">Topic 6: Stock forms, types and sizes</a>
+                            <a href="/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/stocks_forms_types_and_sizes.html">Topic 6: Stock forms, types and sizes</a>
                         </div>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\AdoptingSafeWorkingPractices.html">Adopting Safe Working Practices and Reacting To Potential Hazards</a> -->
-                            <a href="/.html">Topic 7: Scales of production</a>
+                            <a href="/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/scales_of_production.html">Topic 7: Scales of production</a>
                         </div>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\FeaturesOfManufacturingIndustries.html">Features Of Manufacturing Industries</a> -->
-                            <a href="/.html">Topic 8: Specialist techniques and processes</a>
+                            <a href="/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/specialist_techniques_and_processes.html">Topic 8: Specialist techniques and processes</a>
                         </div>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\DesigningForMaintenanceAndTheCleanerEnvironment.html">Designing For Maintenance and The Cleaner Environment</a> -->
-                            <a href="/.html">Topic 9: Surface treatments and fnishes</a>
+                            <a href="/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/surface_treatments_and_finishes.html">Topic 9: Surface treatments and fnishes</a>
                         </div>
                     </div>
                 </div>
