--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/aqa_gcse_spec_prin_notes_pages/aqa_gcse_materials_and_objects_can_be_manipulated_to_resist.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/aqa_gcse_spec_prin_notes_pages/aqa_gcse_materials_and_objects_can_be_manipulated_to_resist.html
@@ -8,69 +8,103 @@
     <div class="containter">
         <div class="notes-content-wrapper">
             <div class="notes-content-header" style="background-image:url(/images/note_pic.jpg)" title="metal background">
-                <h1 style="color:rgb(0, 0, 0)"><u><b>Composite materials</b></u></h1>
+                <h1 style="color:rgb(0, 0, 0)"><u><b>Materials and objects can be manipulated to resist and work with forces and stresses</b></u></h1>
             </div>
 
             <div class="notes-content">
                 <div class="notes-content-subheader">
-                    <h2><hr>Composite material: produced by
-                        combining two or more different materials to create
-                        an enhanced materia<hr></h2>
-                </div>
+                    <table style="background-color: #bdbdbd63; border: 1px solid grey;" >
+                        <tr class="notes-table-header"><br>
+                            <th>Force</th>
+                            <th>Definition</th>
+                            <th>Examples</th>
+                        </tr>
+                        
+                          <!-- Tension -->
+                            <tr style="background-color: #bdbdbd63;">
+                                <td style="border: 1px solid grey;"><b>Tension</b></td>
+                                <td style="border: 1px solid grey;">
+                                <ul>
+                                    <li>Force that pulls materials apart</li>
+                                    <li>Stretches the object along its length</li>
+                                </ul>
+                                </td>
+                                <td style="border: 1px solid grey;">
+                                <ul>
+                                    <li>Steel cables in suspension bridges</li>
+                                    <li>Rubber bands being stretched</li>
+                                </ul>
+                                </td>
+                            </tr>
 
-                <h3 id="GRP"><u><b>Glass reinforced plastic (GRP):</b></u></h3>
-                <table>
-                    <tr class="notes-table-header">
-                        <th>Advantages</th>
-                        <th>Disadvantages</th>
-                    </tr>
-                    <tr>
-                        <td class="notes-table-data-pro">
-                            <ul>
-                                <li>Good strength to weight ratio</li>
-                                <li>Good tensile strength</li>
-                                <li>Can be repaired easily (patch kits etc)</li>
-                                <li>Corrosion resistant</li>
-                                <li>Durable</li>
-                            </ul>
-                        </td>
-                        <td class="notes-table-data-con">
-                            <ul>
-                                <li>Brittle/can shatter easily</li>
-                                <li>Not very heat resistant</li>                            
-                            </ul>
-                        </td>
-                    </tr>
-                </table>
-                <h3><b>Uses: </b>Piping, boat hulls, fighter planes<br><br><br></h3>
+                            <!-- Compression -->
+                            <tr style="background-color: #bdbdbd63;">
+                                <td style="border: 1px solid grey;"><b>Compression</b></td>
+                                <td style="border: 1px solid grey;">
+                                <ul>
+                                    <li>Force that squeezes materials together</li>
+                                    <li>Reduces length or volume</li>
+                                </ul>
+                                </td>
+                                <td style="border: 1px solid grey;">
+                                <ul>
+                                    <li>Concrete columns in buildings</li>
+                                    <li>Springs in car suspensions</li>
+                                </ul>
+                                </td>
+                            </tr>
 
+                            <!-- Bending -->
+                            <tr style="background-color: #bdbdbd63;">
+                                <td style="border: 1px solid grey;"><b>Bending</b></td>
+                                <td style="border: 1px solid grey;">
+                                <ul>
+                                    <li>Force that deforms material into a curve</li>
+                                    <li>Combination of tension and compression</li>
+                                </ul>
+                                </td>
+                                <td style="border: 1px solid grey;">
+                                <ul>
+                                    <li>Bookshelves under load</li>
+                                    <li>Beams in bridges</li>
+                                </ul>
+                                </td>
+                            </tr>
 
-                <h3 id="Carbonfibre"><b><u>Carbonfibre reinforced plastic (CRP):</b></u></h3>
-                <table>
-                    <tr class="notes-table-header">
-                        <th>Advantages</th>
-                        <th>Disadvantages</th>
-                    </tr>
-                    <tr>
-                        <td class="notes-table-data-pro">
-                            <ul>
-                                <li>Lightweight</li>
-                                <li>High tensile strength</li>
-                                <li>Durable</li>
-                                <li>Corrosion resistant</li>
-                                <li>Good electrical conductor</li>
-                            </ul>
-                        </td>
-                        <td class="notes-table-data-con">
-                            <ul>
-                                <li>Can break/shatter</li>
-                                <li>Brittle</li>
-                                <li>Relatively expensive</li>
-                            </ul>
-                        </td>
-                    </tr>
-                </table>
-                <h3><b>Uses: </b>F1 cars, bicycles, tennis rackets<br><br><br></h3>
+                            <!-- Torsion -->
+                            <tr style="background-color: #bdbdbd63;">
+                                <td style="border: 1px solid grey;"><b>Torsion</b></td>
+                                <td style="border: 1px solid grey;">
+                                <ul>
+                                    <li>Twisting force causing rotation</li>
+                                    <li>Creates shear stress within the material</li>
+                                </ul>
+                                </td>
+                                <td style="border: 1px solid grey;">
+                                <ul>
+                                    <li>Drive shafts in vehicles</li>
+                                    <li>Turning a screwdriver</li>
+                                </ul>
+                                </td>
+                            </tr>
+
+                            <!-- Shear -->
+                            <tr style="background-color: #bdbdbd63;">
+                                <td style="border: 1px solid grey;"><b>Shear</b></td>
+                                <td style="border: 1px solid grey;">
+                                <ul>
+                                    <li>Forces act in opposite directions, parallel to surface</li>
+                                    <li>Causes material to slide along a plane</li>
+                                </ul>
+                                </td>
+                                <td style="border: 1px solid grey;">
+                                <ul>
+                                    <li>Scissors cutting paper</li>
+                                    <li>Bolts in machinery under load</li>
+                                </ul>
+                                </td>
+                            </tr>
+                            </table>
 
                 
 
