--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/aqa_gcse_spec_prin_notes_pages/aqa_gcse_selection_of_materials_or_components.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/aqa_gcse_spec_prin_notes_pages/aqa_gcse_selection_of_materials_or_components.html
@@ -147,7 +147,7 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A.pdf">Selection of materials or components Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section B - Specialist technical principles/Topic B1/3.2.1_selection_of_materials_or_components.pdf">Selection of materials or components Questions</a>
                 </div> 
             </div>
         </div>
