--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/aqa_gcse_spec_prin_notes_pages/aqa_gcse_materials_and_objects_can_be_manipulated_to_resist.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/aqa_gcse_spec_prin_notes_pages/aqa_gcse_materials_and_objects_can_be_manipulated_to_resist.html
@@ -113,7 +113,7 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A">Materials and objects can be manipulated to resist and work with forces and stresses Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section B - Specialist technical principles/Topic B2/3.2.2_materials_and_objects_can_be_manipulated_to_resist_and_work_with_forces_and_stresses.pdf">Materials and objects can be manipulated to resist and work with forces and stresses Questions</a>
                 </div> 
             </div>
         </div>
