--- a/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/moulding_notes.html
+++ b/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/moulding_notes.html
@@ -93,8 +93,8 @@
                         <td class="notes-table-data-con">
                             <ul>
                                 <li>High initial set up costs</li>
-                                <li>Moulds are expensice to create</li>
-                                <li>Can create large mouldings</li>
+                                <li>Moulds are expensive to create</li>
+                                <li>Cannot create large mouldings</li>
                             </ul>
                         </td>
                     </tr>
