--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/aqa_gcse_spec_prin_notes_pages/aqa_gcse_ecological_issues_in_the_design_and_manufacture.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/aqa_gcse_spec_prin_notes_pages/aqa_gcse_ecological_issues_in_the_design_and_manufacture.html
@@ -8,78 +8,104 @@
     <div class="containter">
         <div class="notes-content-wrapper">
             <div class="notes-content-header" style="background-image:url(/images/note_pic.jpg)" title="metal background">
-                <h1 style="color:rgb(0, 0, 0)"><u><b>Composite materials</b></u></h1>
+                <h1 style="color:rgb(0, 0, 0)"><u><b>Ecological issues in the design and manufacture of products</b></u></h1>
             </div>
 
             <div class="notes-content">
                 <div class="notes-content-subheader">
-                    <h2><hr>Composite material: produced by
-                        combining two or more different materials to create
-                        an enhanced materia<hr></h2>
+                    <h2><hr>Environmental issues caused by resource extraction and product lifecycle<hr></h2>
                 </div>
 
-                <h3 id="GRP"><u><b>Glass reinforced plastic (GRP):</b></u></h3>
+                <h3 id="resource-extraction"><u><b>Resource Extraction Methods:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
-                        <th>Advantages</th>
-                        <th>Disadvantages</th>
+                        <th>Method</th>
+                        <th>Environmental Impact</th>
                     </tr>
                     <tr>
-                        <td class="notes-table-data-pro">
+                        <td class="notes-table-data-pro" style="background-color: #f2f2f2;">
                             <ul>
-                                <li>Good strength to weight ratio</li>
-                                <li>Good tensile strength</li>
-                                <li>Can be repaired easily (patch kits etc)</li>
-                                <li>Corrosion resistant</li>
-                                <li>Durable</li>
+                                <li><b>Deforestation</b></li>
                             </ul>
                         </td>
                         <td class="notes-table-data-con">
                             <ul>
-                                <li>Brittle/can shatter easily</li>
-                                <li>Not very heat resistant</li>                            
+                                <li>Loss of biodiversity</li>
+                                <li>Increased CO₂ levels (fewer trees to absorb carbon)</li>
+                                <li>Soil erosion</li>
+                                <li>Disruption of water cycles</li>
                             </ul>
                         </td>
                     </tr>
-                </table>
-                <h3><b>Uses: </b>Piping, boat hulls, fighter planes<br><br><br></h3>
-
-
-                <h3 id="Carbonfibre"><b><u>Carbonfibre reinforced plastic (CRP):</b></u></h3>
-                <table>
-                    <tr class="notes-table-header">
-                        <th>Advantages</th>
-                        <th>Disadvantages</th>
-                    </tr>
                     <tr>
-                        <td class="notes-table-data-pro">
+                        <td class="notes-table-data-pro" style="background-color: #f2f2f2;">
                             <ul>
-                                <li>Lightweight</li>
-                                <li>High tensile strength</li>
-                                <li>Durable</li>
-                                <li>Corrosion resistant</li>
-                                <li>Good electrical conductor</li>
+                                <li><b>Mining</b></li>
                             </ul>
                         </td>
                         <td class="notes-table-data-con">
                             <ul>
-                                <li>Can break/shatter</li>
-                                <li>Brittle</li>
-                                <li>Relatively expensive</li>
+                                <li>Landscape destruction</li>
+                                <li>Water pollution from runoff</li>
+                                <li>Release of toxic chemicals</li>
+                                <li>Habitat destruction</li>
                             </ul>
                         </td>
                     </tr>
-                </table>
-                <h3><b>Uses: </b>F1 cars, bicycles, tennis rackets<br><br><br></h3>
+                    <tr>
+                        <td class="notes-table-data-pro" style="background-color: #f2f2f2;">
+                            <ul>
+                                <li><b>Drilling</b></li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Oil spills</li>
+                                <li>Water contamination</li>
+                                <li>Air pollution</li>
+                                <li>Greenhouse gas emissions</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro" style="background-color: #f2f2f2;">
+                            <ul>
+                                <li><b>Farming</b></li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Land use changes</li>
+                                <li>Water depletion</li>
+                                <li>Pesticide/fertilizer runoff</li>
+                                <li>Methane emissions (livestock)</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table></h3>
 
-                
+                <h3 id="product-mileage"><u><b>Product Mileage (Lifecycle Transportation):</b></u></h3>
+                <ul>
+                    <li><b>Raw material source → Manufacturing:</b> Energy used to transport raw materials</li>
+                    <li><b>Manufacturing → Distribution:</b> Energy used to move finished products</li>
+                    <li><b>Distribution → User location:</b> Energy used for final delivery</li>
+                    <li><b>User location → Final disposal:</b> Energy used for waste management/recycling</li>
+                </ul>
+                <h3><b>Impact:</b> Each transportation stage contributes to carbon footprint through fuel consumption<br></h3>
 
-                
+                <h3 id="manufacturing-carbon"><u><b>Carbon Production in Manufacturing:</b></u></h3>
+                <ul>
+                    <li>Energy-intensive processes release CO₂</li>
+                    <li>Use of fossil fuels for heat/power generation</li>
+                    <li>Chemical reactions in some processes emit greenhouse gases</li>
+                    <li>Waste products may release carbon when decomposing</li>
+                </ul>
+                <h3><b>Reduction Methods:</b> Renewable energy, process optimization, carbon capture<br></h3>
 
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A3/3.1.3_composite_materials.pdf">Composite materials Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A3/3.1.3_environmental_impact.pdf">Ecological issues in the design and manufacture of products Questions</a>
                 </div> 
             </div>
         </div>
