--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/aqa_gcse_spec_prin_notes_pages/aqa_gcse_the_6_rs.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Specialist_technical_principles/aqa_gcse_spec_prin_notes_topics/aqa_gcse_spec_prin_notes_pages/aqa_gcse_the_6_rs.html
@@ -8,78 +8,124 @@
     <div class="containter">
         <div class="notes-content-wrapper">
             <div class="notes-content-header" style="background-image:url(/images/note_pic.jpg)" title="metal background">
-                <h1 style="color:rgb(0, 0, 0)"><u><b>Composite materials</b></u></h1>
+                <h1 style="color:rgb(0, 0, 0)"><u><b>The six Rs</b></u></h1>
             </div>
 
             <div class="notes-content">
                 <div class="notes-content-subheader">
-                    <h2><hr>Composite material: produced by
-                        combining two or more different materials to create
-                        an enhanced materia<hr></h2>
                 </div>
 
-                <h3 id="GRP"><u><b>Glass reinforced plastic (GRP):</b></u></h3>
-                <table>
-                    <tr class="notes-table-header">
-                        <th>Advantages</th>
-                        <th>Disadvantages</th>
+                <h3 id="six-rs"><u><b>The 6 R's Explained:</b></u></h3>
+                <table style="background-color: #f2f2f2; width: 100%;">
+                    <tr class="notes-table-header" style="background-color: #d9d9d9;">
+                        <th>Principle</th>
+                        <th>Definition</th>
+                        <th>Examples</th>
                     </tr>
                     <tr>
-                        <td class="notes-table-data-pro">
+                        <td class="notes-table-data-pro" style="background-color: #f2f2f2; text-align: center;">
+                            <b>Reduce</b>
+                        </td>
+                        <td class="notes-table-data-con" style="background-color: #f2f2f2">
+                            Minimising the amount of resources/energy we use
+                        </td>
+                        <td class="notes-table-data-con" style="background-color: #f2f2f2">
                             <ul>
-                                <li>Good strength to weight ratio</li>
-                                <li>Good tensile strength</li>
-                                <li>Can be repaired easily (patch kits etc)</li>
-                                <li>Corrosion resistant</li>
-                                <li>Durable</li>
+                                <li>Buying products with less packaging</li>
+                                <li>Using energy-efficient appliances</li>
+                                <li>Printing double-sided</li>
                             </ul>
                         </td>
-                        <td class="notes-table-data-con">
+                    </tr>
+                    <tr style="background-color: #f2f2f2;">
+                        <td class="notes-table-data-pro" style="background-color: #f2f2f2; text-align: center;">
+                            <b>Refuse</b>
+                        </td>
+                        <td class="notes-table-data-con" style="background-color: #f2f2f2">
+                            Saying no to unnecessary items or materials
+                        </td>
+                        <td class="notes-table-data-con" style="background-color: #f2f2f2">
                             <ul>
-                                <li>Brittle/can shatter easily</li>
-                                <li>Not very heat resistant</li>                            
+                                <li>Declining plastic straws</li>
+                                <li>Rejecting junk mail</li>
+                                <li>Avoiding single-use plastics</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro" style="background-color: #f2f2f2; text-align: center;">
+                            <b>Re-use</b>
+                        </td>
+                        <td class="notes-table-data-con" style="background-color: #f2f2f2">
+                            Using items multiple times instead of disposing
+                        </td>
+                        <td class="notes-table-data-con" style="background-color: #f2f2f2">
+                            <ul>
+                                <li>Using refillable water bottles</li>
+                                <li>Donating old clothes</li>
+                                <li>Repurposing glass jars</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr style="background-color: #f2f2f2;">
+                        <td class="notes-table-data-pro" style="background-color: #f2f2f2; text-align: center;">
+                            <b>Repair</b>
+                        </td>
+                        <td class="notes-table-data-con" style="background-color: #f2f2f2">
+                            Fixing broken items rather than replacing them
+                        </td>
+                        <td class="notes-table-data-con" style="background-color: #f2f2f2">
+                            <ul>
+                                <li>Sewing torn clothing</li>
+                                <li>Fixing electronics</li>
+                                <li>Repairing furniture</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro" style="background-color: #f2f2f2; text-align: center;">
+                            <b>Recycle</b>
+                        </td>
+                        <td class="notes-table-data-con" style="background-color: #f2f2f2">
+                            Processing materials to make new products
+                        </td>
+                        <td class="notes-table-data-con" style="background-color: #f2f2f2">
+                            <ul>
+                                <li>Sorting household waste</li>
+                                <li>Taking electronics to e-waste centers</li>
+                                <li>Buying recycled paper products</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr style="background-color: #f2f2f2;">
+                        <td class="notes-table-data-pro" style="background-color: #f2f2f2; text-align: center;">
+                            <b>Rethink</b>
+                        </td>
+                        <td class="notes-table-data-con" style="background-color: #f2f2f2">
+                            Considering alternative, sustainable approaches
+                        </td>
+                        <td class="notes-table-data-con" style="background-color: #f2f2f2">
+                            <ul>
+                                <li>Using digital documents instead of paper</li>
+                                <li>Borrowing instead of buying</li>
+                                <li>Choosing sustainable materials</li>
                             </ul>
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Piping, boat hulls, fighter planes<br><br><br></h3>
 
-
-                <h3 id="Carbonfibre"><b><u>Carbonfibre reinforced plastic (CRP):</b></u></h3>
-                <table>
-                    <tr class="notes-table-header">
-                        <th>Advantages</th>
-                        <th>Disadvantages</th>
-                    </tr>
-                    <tr>
-                        <td class="notes-table-data-pro">
-                            <ul>
-                                <li>Lightweight</li>
-                                <li>High tensile strength</li>
-                                <li>Durable</li>
-                                <li>Corrosion resistant</li>
-                                <li>Good electrical conductor</li>
-                            </ul>
-                        </td>
-                        <td class="notes-table-data-con">
-                            <ul>
-                                <li>Can break/shatter</li>
-                                <li>Brittle</li>
-                                <li>Relatively expensive</li>
-                            </ul>
-                        </td>
-                    </tr>
-                </table>
-                <h3><b>Uses: </b>F1 cars, bicycles, tennis rackets<br><br><br></h3>
-
-                
-
-                
+                <h3><b>Benefits of the 6 R's:</b></h3>
+                <ul>
+                    <li>Reduces waste going to landfill</li>
+                    <li>Conserves natural resources</li>
+                    <li>Saves energy in production</li>
+                    <li>Lowers carbon footprint</li>
+                    <li>Saves money in the long term</li>
+                </ul>
 
                 <h3><b>Topic test:</b></h3>
-
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A3/3.1.3_composite_materials.pdf">Composite materials Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A3/3.1.3_six_rs.pdf">The six Rs Questions</a>
                 </div> 
             </div>
         </div>
