Edexcel notes update

--- a/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/modern_manufacturing_methods_notes.html
+++ b/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/modern_manufacturing_methods_notes.html
@@ -293,6 +293,14 @@
                         </td>
                     </tr>
                 </table>
+                <h4>The 5 Stages of Lean Manufacturing:</h4>
+                <ol>
+                    <li><strong>Identify Value</strong> - Determine what customers truly value in your product/service</li>
+                    <li><strong>Map the Value Stream</strong> - Analyse and document all steps in the production process</li>
+                    <li><strong>Create Flow</strong> - Ensure smooth, uninterrupted workflow between processes</li>
+                    <li><strong>Establish Pull</strong> - Implement JIT production based on actual demand</li>
+                    <li><strong>Pursue Perfection</strong> - Continuously improve through Kaizen philosophy</li>
+                </ol>
 
             <div class="notes-content-subheader">
                 <h2><hr><hr></h2>
