--- a/pastpapers/papers_level/pastpaers_gcse/pastpapers_gcse_aqa.html
+++ b/pastpapers/papers_level/pastpaers_gcse/pastpapers_gcse_aqa.html
@@ -59,6 +59,18 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(255, 0, 0, 0.5); border: 2px solid rgb(255, 0, 0);"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/AQA_GCSE/AQA_2019P1Q.pdf">2019 Paper 1</a>
+                        </div>
+                        <div class="blurbox">
+                            <a href="../../../documents/pastpapers/AQA_GCSE/AQA_2019P1MS.pdf">2019 Paper 1 Markscheme</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
